done but not done

--- a/Semester 3 project/Views/Home/addapplicant.cshtml
+++ b/Semester 3 project/Views/Home/addapplicant.cshtml
@@ -14,20 +14,21 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="addaplicant.html">
-                            <span data-feather="file"></span>
+                        <a href="@Url.Action("addapplicant", "Home")" class="nav-link">
+                            <span data-feather="activity"></span>
                             Set exam date
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="applic_list.html">
-                            <span data-feather="shopping-cart"></span>
+                        <a href="@Url.Action("applic_list", "Home")" class="nav-link">
+                            <span data-feather="users"></span>
                             view applicant Info
                         </a>
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="editQuest.html">
-                            <span data-feather="users"></span>
+                        <a href="@Url.Action("editQuest", "Home")" class="nav-link">
+                            <span data-feather="shopping-cart"></span>
                             Edit Question
                         </a>
                     </li>
