--- a/Semester 3 project/Views/Shared/_Layout.cshtml
+++ b/Semester 3 project/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 <body>
 
 
-    @*<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
             <title>Bootstrap</title>
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -96,35 +96,7 @@
                 </li>
             </ul>
         </header>
-    </div>*@
-
-
-    @*<div class="container">
-        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <use xlink:href="#bootstrap" />
-                </svg>
-                <span class="fs-4">Simple header</span>
-            </a>
-
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="home.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link">FAQs</a></li>
-                <li class="py-auto btn me-2 btn-outline-success">
-                    <a href="adminLogin.html" class="navar py-auto" aria-current="page">
-                        admin Login
-                    </a>
-                </li>
-                <li class="btn py-auto btn-outline-success">
-                    <a href="userLogin.html" class="navar py-auto" aria-current="page">
-                        user Login
-                    </a>
-                </li>
-            </ul>
-        </header>
-    </div>*@
+    </div>
 
     <div class="b-example-divider"></div>
 
