--- a/Semester 3 project/Views/Home/adminLogin.cshtml
+++ b/Semester 3 project/Views/Home/adminLogin.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "adminLogin";
 }
-
+    
 <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
         <div class="col-lg-7 text-center text-lg-start">
@@ -10,14 +10,15 @@
             <p class="col-lg-10 fs-4">Here as an Admin you can Edit, view, and update Applicant info. Login with the user name and password given by the administrator </p>
         </div>
         <div class="col-md-10 mx-auto col-lg-5">
-            <form class="p-4 p-md-5 border rounded-3 bg-light">
+            @using (Html.BeginForm("adminLogin", "Home", FormMethod.Post, new { @class = "p-4 p-md-5 border rounded-3 bg-light" }))
+            {
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Username</label>
+                    @Html.TextBox("ad_name","", new { @class = "form-control", placeholder = "name@example.com" })
+                    @Html.Label("Username", new { @class = "form-input-label" })
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Password</label>
+                    @Html.Password("ad_pass", "", new { @class = "form-control", placeholder = "Password" })
+                    @Html.Label("Password", new { @class = "form-input-label" })
                 </div>
                 <div class="checkbox mb-3">
                     <label>
@@ -25,8 +26,16 @@
                     </label>
                 </div>
                 <button class="w-100 btn btn-lg btn-success text-white" type="submit">Login</button>
-            </form>
+            }
+
         </div>
     </div>
 </div>
+
+
+
+
+
+
+
 
