--- a/Semester 3 project/Views/Home/applicantPage.cshtml
+++ b/Semester 3 project/Views/Home/applicantPage.cshtml
@@ -3,5 +3,69 @@
     ViewBag.Title = "applicantPage";
 }
 
-<h2>applicantPage</h2>
+<div class="container-fluid">
+    `
+    <div class="row">
+        <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+            <div class="position-sticky pt-3">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <h4 class="text-success">Applicant page</h4>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">
+                            <span data-feather="file"></span>
+                            Start exam
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="applic_list.html">
+                            <span data-feather="shopping-cart"></span>
+                            view profile
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+
+        <div class="container mb-5 col-md-9 col-lg-10 mx-auto">
+            <h1 class="text-center mt-4">Quiz App</h1>
+            <div class="row mt-4">
+                <div class="col-md-8 offset-md-2">
+                    <div class="card">
+                        <div class="card-header bg-success text-white d-none">Question <span id="question-number"></span></div>
+                        <div class="card-body">
+                            <div class="sel">
+                                <select class="form-select form-select-sm mb-3" aria-label=".form-select-sm example" name="category" id="category" placeholder="category">
+                                    <option selected>Open this select menu</option>
+                                    <option value="1">General Knowledge</option>
+                                    <option value="2">Mathematics</option>
+                                    <option value="3">Computer Technology</option>
+                                </select>
+                            </div>
+                            <p id="question"></p>
+                            <div id="choices" class="hide">
+                                <div class="option option1 btn btn-light btn-block px-3 py-2 mt-3"></div>
+                                <div class="option option2 px-3 btn btn-light btn-block py-2 mt-3"></div>
+                                <div class="option option3 px-3 btn btn-light btn-block py-2 mt-3"></div>
+                                <div class="option option4 px-3 btn btn-light btn-block py-2 mt-3"></div>
+                            </div>
+                            <div class="text-center d-flex justify-content-between mt-4 enter">
+                                <button id="start" class="btn btn-success mx-auto">Start Quiz</button>
+                                <button type="button" class="btn btn-success prvBtn hide" id="previous-button">Previous</button>
+                                <button type="submit" class="btn btn-success nxtBtn hide" id="next-button">Next</button><button id="next" class="btn btn-primary mt-2" style="display:none;">Next Question</button>
+                            </div>
+                            <div id="timer" class="text-center mt-2" style="display:none;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        </main>
+    </div>
+</div>
 
